--- a/DocumentLayoutAnalysis/DocumentLayoutAnalysis/DocumentLayoutAnalysis.csproj
+++ b/DocumentLayoutAnalysis/DocumentLayoutAnalysis/DocumentLayoutAnalysis.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -49,8 +50,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShapesTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -84,6 +87,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\AdobeFontMetrics\MustRead.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ImageConverter\ImageConverter.csproj">
+      <Project>{78212f45-d69e-4a84-8a26-a4bb5609b660}</Project>
+      <Name>ImageConverter</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
