--- a/DocumentLayoutAnalysis/DocumentLayoutAnalysis/packages.config
+++ b/DocumentLayoutAnalysis/DocumentLayoutAnalysis/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Controls" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.MachineLearning" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net461" />
   <package id="PdfPig" version="0.0.9" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
 </packages>
