--- a/DocumentLayoutAnalysis/DocumentLayoutAnalysis/DocumentLayoutAnalysis.csproj
+++ b/DocumentLayoutAnalysis/DocumentLayoutAnalysis/DocumentLayoutAnalysis.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="ClusteringAlgorithms.cs" />
     <Compile Include="DocstrumBBTest.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="HOCR.cs" />
     <Compile Include="HocrTest.cs" />
     <Compile Include="ImageTest.cs" />
@@ -84,7 +85,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PathsTest.cs" />
     <Compile Include="RamerDouglasPeucker.cs" />
+    <Compile Include="RecursiveXYCutLocal.cs" />
+    <Compile Include="RecursiveXYCutPath.cs" />
+    <Compile Include="RXYCutStepsTest.cs" />
     <Compile Include="RXYCutTest.cs" />
+    <Compile Include="TextSequenceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -102,9 +107,6 @@
     <None Include="Resources\Page segmentation\Two Geometric Algorithms for Layout Analysis--breuel-das.pdf" />
     <None Include="Resources\Page segmentation\Voronoi++.pdf" />
     <None Include="Resources\Samples\104-7-3.pdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Resources\Samples\A Study In Scarlet.pdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Resources\Samples\excel.pdf">
@@ -159,6 +161,7 @@
     <Folder Include="PageSegmenter\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="doc\xy cut.gif" />
     <Content Include="License-LGPL.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
