--- a/DocumentLayoutAnalysis/DocumentLayoutAnalysis/DocumentLayoutAnalysis.csproj
+++ b/DocumentLayoutAnalysis/DocumentLayoutAnalysis/DocumentLayoutAnalysis.csproj
@@ -54,6 +54,7 @@
     <Reference Include="Accord.Statistics, Version=3.8.0.0, Culture=neutral, PublicKeyToken=fa1a88e29555ccf7, processorArchitecture=MSIL">
       <HintPath>..\packages\Accord.Statistics.3.8.0\lib\net46\Accord.Statistics.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -75,12 +76,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AltoTest.cs" />
     <Compile Include="ClusteringAlgorithms.cs" />
     <Compile Include="DocstrumBBTest.cs" />
+    <Compile Include="Export\Alto.cs" />
+    <Compile Include="Export\hOCR.cs" />
+    <Compile Include="Export\PageXml.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="HOCR.cs" />
     <Compile Include="HocrTest.cs" />
+    <Compile Include="IBlocksOrderer.cs" />
     <Compile Include="ImageTest.cs" />
+    <Compile Include="PageSegmenter\ConstrainedTextlinePageSegmenter.cs" />
+    <Compile Include="PageSegmenter\DistancesLocal.cs" />
+    <Compile Include="PageXmlTest.cs" />
+    <Compile Include="PdfATest.cs" />
+    <Compile Include="PdfGeometry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PathsTest.cs" />
@@ -89,10 +99,21 @@
     <Compile Include="RecursiveXYCutPath.cs" />
     <Compile Include="RXYCutStepsTest.cs" />
     <Compile Include="RXYCutTest.cs" />
+    <Compile Include="StraightSkeleton\Vertex.cs" />
+    <Compile Include="StringWriterUtf8.cs" />
+    <Compile Include="TextSequenceBlocksOrderer.cs" />
     <Compile Include="TextSequenceTest.cs" />
+    <Compile Include="VertexTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Export\Scemas\alto-4-1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Export\Scemas\pagecontent.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Export\Scemas\tei_ocr.rng" />
     <None Include="packages.config" />
     <None Include="Resources\Chart and diagram extraction\104-7-3.pdf" />
     <None Include="Resources\Chart and diagram extraction\Extraction, layout analysis and classification of diagrams in PDF documents.pdf" />
@@ -139,6 +160,9 @@
     <None Include="Resources\Samples\Random 2 Columns Lists Chart.pdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Resources\Samples\Random 2 Columns Lists Chart_PDF-A.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\Table extraction\A Fast Preprocessing Method for Table Boundary Detection - Narrowing Down the Sparse Lines using Solely Coordinate Information.pdf" />
     <None Include="Resources\Table extraction\Algorithmic Extraction of Data in Tables in Pdf Documents - Nurminen.pdf" />
     <None Include="Resources\Table extraction\Automatic Table Ground Truth Generation and A Background-analysis-based Table Structure Extraction Method.pdf" />
@@ -157,13 +181,12 @@
       <Name>ImageConverter</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PageSegmenter\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="doc\xy cut.gif" />
     <Content Include="doc\xy cut_small.gif" />
     <Content Include="License-LGPL.txt" />
+    <Content Include="StraightSkeleton\ref.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Accord.3.8.0\build\Accord.targets" Condition="Exists('..\packages\Accord.3.8.0\build\Accord.targets')" />
