--- a/DocumentLayoutAnalysis/DocumentLayoutAnalysis/packages.config
+++ b/DocumentLayoutAnalysis/DocumentLayoutAnalysis/packages.config
@@ -5,7 +5,7 @@
   <package id="Accord.MachineLearning" version="3.8.0" targetFramework="net461" />
   <package id="Accord.Math" version="3.8.0" targetFramework="net461" />
   <package id="Accord.Statistics" version="3.8.0" targetFramework="net461" />
-  <package id="PdfPig" version="0.1.1" targetFramework="net461" />
+  <package id="PdfPig" version="0.1.2-alpha002" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
 </packages>
