--- a/DocumentLayoutAnalysis/DlaViewer/DlaViewer.csproj
+++ b/DocumentLayoutAnalysis/DlaViewer/DlaViewer.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="OxyPlot.Wpf" Version="2.0.0" />
-    <PackageReference Include="PdfPig" Version="0.1.2" />
+    <PackageReference Include="PdfPig" Version="0.1.3-alpha001" />
+    <PackageReference Include="Tabula" Version="0.1.0-alpha002" />
   </ItemGroup>
 
   <ItemGroup>
