--- a/DocumentLayoutAnalysis/DlaViewer/DlaViewer.csproj
+++ b/DocumentLayoutAnalysis/DlaViewer/DlaViewer.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OxyPlot.Wpf" Version="2.0.0" />
-    <PackageReference Include="PdfPig" Version="0.1.5-alpha-20210817-b1f88" />
+    <PackageReference Include="OxyPlot.Wpf" Version="2.1.0" />
+    <PackageReference Include="PdfPig" Version="0.1.6-alpha-20220116-e54cd" />
   </ItemGroup>
 
   <ItemGroup>
