--- a/DocumentLayoutAnalysis/DocumentLayoutAnalysis/packages.config
+++ b/DocumentLayoutAnalysis/DocumentLayoutAnalysis/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="PdfPig" version="0.1.6-alpha-20220116-e54cd" targetFramework="net461" />
+  <package id="PdfPig" version="0.1.8-alpha-20230324-a3a9d" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
